syntax = "proto3";
package kujira.crypto.ecdsa256;

import "amino/amino.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/Team-Kujira/core/crypto/keys/ecdsa256";

// PubKey defines a ecdsa256 public key
message PubKey {
  option (amino.name) = "tendermint/PubKeyEcdsa256";

  option (amino.message_encoding) = "key_field";
  option (gogoproto.goproto_stringer) = false;

  bytes key = 1;
}

// PrivKey defines a ecdsa256 private key.
message PrivKey {
  option (amino.name) = "tendermint/PrivKeyEcdsa256";
  option (amino.message_encoding) = "key_field";

  bytes key = 1;
}
