syntax = "proto3";
package kujira.oracle;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/Team-Kujira/core/x/oracle/types";

// Params defines the parameters for the oracle module.
message Params {
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = false;

  uint64 vote_period    = 1 [(gogoproto.moretags) = "yaml:\"vote_period\""];
  string vote_threshold = 2 [
    (gogoproto.moretags)   = "yaml:\"vote_threshold\"",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];
  string max_deviation = 3 [
    (gogoproto.moretags)   = "yaml:\"max_deviation\"",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];
  repeated string required_denoms                  = 4 [
    (gogoproto.moretags)     = "yaml:\"required_denoms\""
  ];
  string slash_fraction = 5 [
    (gogoproto.moretags)   = "yaml:\"slash_fraction\"",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];
  uint64 slash_window         = 6 [(gogoproto.moretags) = "yaml:\"slash_window\""];
  string min_valid_per_window = 7 [
    (gogoproto.moretags)   = "yaml:\"min_valid_per_window\"",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];
  // Deprecated
  string reward_band = 8 [
    (gogoproto.moretags)   = "yaml:\"reward_band\"",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];
  repeated Denom whitelist   = 9 [
    (gogoproto.moretags)     = "yaml:\"whitelist\"",
    (gogoproto.castrepeated) = "DenomList",
    (gogoproto.nullable)     = false
  ];
  repeated PriceIntervalParam exchange_rate_snap_epochs = 10
      [ (gogoproto.nullable) = false ];
}

// Denom - the object to hold configurations of each denom
message Denom {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = false;

  string name      = 1 [(gogoproto.moretags) = "yaml:\"name\""];
}

// ExchangeRateTuple - struct to store interpreted exchange rates data to store
message ExchangeRateTuple {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = false;

  string denom         = 1 [(gogoproto.moretags) = "yaml:\"denom\""];
  string exchange_rate = 2 [
    (gogoproto.moretags)   = "yaml:\"exchange_rate\"",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];
}

message VoteExtension {
  int64 height = 1;
  repeated ExchangeRateTuple prices = 2 [
    (gogoproto.nullable) = false
  ];
}

message PriceIntervalParam {
  option (gogoproto.equal) = true;

  string epoch = 1; // e.g. day
  int64 duration = 2; // e.g. 86400
  int64 max_count = 3; // e.g. 30
}

message HistoricalExchangeRate {
  string epoch = 1;
  int64 timestamp = 2;
  string denom = 3 [ (gogoproto.moretags) = "yaml:\"denom\"" ];
  string exchange_rate = 4 [
    (gogoproto.moretags) = "yaml:\"exchange_rate\"",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}
